--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 					</li>
 					<li>
 						<a class="rodapePrincipal-patrocinadores-list-link patrocinadores-list-link-caelum" href="#">
-							<img src="img/logos/caelum.svg" alt="Logo da Caelum">
+							<img src="img/caelum.svg" alt="Logo da Caelum">
 						</a>
 					</li>
 					<li>
