--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<ul class="rodapePrincipal-patrocinadores-list">
 					<li>
 						<a class="rodapePrincipal-patrocinadores-list-link patrocinadores-list-link-alura" href="#">
-							<img src="img/logos/alura.svg" alt="Logo da Alura">
+							<img src="img/alura.svg" alt="Logo da Alura">
 						</a>
 					</li>
 					<li>
@@ -131,7 +131,7 @@
 					</li>
 					<li>
 						<a class="rodapePrincipal-patrocinadores-list-link patrocinadores-list-link-casaDoCodigo" href="#">
-							<img src="img/logos/cdc.svg" alt="Logo da Casa do Código">
+							<img src="img/cdc.svg" alt="Logo da Casa do Código">
 						</a>
 					</li>
 				</ul>
